overflow fix

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 html, body {
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -76,7 +76,6 @@ textarea:focus {
 .container {
   padding: 50px 0;
   width: 100%;
-  overflow-x: hidden !important;
 }
 
 .row {
